--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.5.3",
 		"@rspack/cli": "^0.6.5",
+		"@rspack/core": "^0.6.5",
 		"@rspack/plugin-react-refresh": "^0.6.5",
 		"@swc/helpers": "0.5.11",
 		"@types/node": "^18.17.17",
