--- a/remotes/profile/package.json
+++ b/remotes/profile/package.json
@@ -3,8 +3,8 @@
 	"version": "2.0.0",
 	"private": true,
 	"scripts": {
-		"start": "webpack-cli serve",
-		"build": "webpack --mode production",
+		"start": "rspack serve",
+		"build": "rspack --mode production",
 		"serve": "serve dist -p 3003",
 		"clean": "rm -rf dist"
 	},
