--- a/host/package.json
+++ b/host/package.json
@@ -15,7 +15,9 @@
 		"react-router": "6.22.2",
 		"react-router-dom": "6.22.2",
 		"react-oidc-context": "^3.0.0",
-		"@module-federation/utilities": "1.3.0"
+		"@dream.mf/core": "1.2.1",
+		"@dream.mf/logging": "1.2.0",
+		"@dream.mf/utilities": "0.9.3"
 	},
 	"devDependencies": {
 		"@types/node": "^15.0.3",
