Auth Added, working on bundlers

--- a/host/.env
+++ b/host/.env
@@ -1,1 +1,15 @@
 CONFIG_API=http://localhost:8080/api/remotes/
+
+# Authentication
+OAUTH_AUTHORITY=https://cfryerdev-test.us.auth0.com
+OAUTH_CLIENT_ID=gJK1HBXbD6D0A3xcyTmjMfxZyb34tLJc
+OAUTH_CLIENT_SECRET=
+OAUTH_ISSUER=
+OAUTH_POST_LOGOUT_URL=
+OAUTH_WELL_KNOWN_URL=
+OAUTH_REDIRECT_URL=http://localhost:3000/auth
+OAUTH_SCOPE=openid profile email
+OAUTH_DEBUG=true
+
+# testuser@dream.mf
+# Password123
