--- a/host/package.json
+++ b/host/package.json
@@ -3,9 +3,10 @@
 	"version": "2.0.0",
 	"private": false,
 	"scripts": {
+		"start-webpack": "webpack-cli serve",
+		"build-webpack": "webpack --mode production",
 		"start": "rspack serve",
 		"build": "rspack --mode production",
-		"serve": "serve dist -p 3000",
 		"clean": "rm -rf dist"
 	},
 	"dependencies": {
@@ -15,9 +16,11 @@
 		"react-router": "6.22.2",
 		"react-router-dom": "6.22.2",
 		"react-oidc-context": "^3.0.0",
-		"@dream.mf/core": "1.2.2",
-		"@dream.mf/logging": "1.2.2",
-		"@dream.mf/utilities": "0.9.7"
+		"@dream.mf/core": "1.2.3",
+		"@dream.mf/logging": "1.2.3",
+		"@dream.mf/utilities": "0.9.7",
+		"@dream.mf/bundlers": "0.0.7",
+		"@dream.mf/oidc": "0.9.0"
 	},
 	"devDependencies": {
 		"@types/node": "^15.0.3",
