--- a/remotes/home/package.json
+++ b/remotes/home/package.json
@@ -13,7 +13,8 @@
 		"react-dom": "18.2.0",
 		"react-router": "6.22.2",
 		"react-router-dom": "6.22.2",
-		"react-helmet": "^6.1.0"
+		"react-helmet": "^6.1.0",
+		"@dream.mf/bundlers": "0.0.5"
 	},
 	"devDependencies": {
 		"@babel/core": "7.17.5",
