--- a/remotes/profile/package.json
+++ b/remotes/profile/package.json
@@ -13,7 +13,8 @@
 		"react-dom": "18.2.0",
 		"react-router": "6.22.2",
 		"react-router-dom": "6.22.2",
-		"react-error-boundary": "^3.1.3"
+		"react-error-boundary": "^3.1.3",
+		"@dream.mf/bundlers": "0.0.5"
 	},
 	"devDependencies": {
 		"@types/node": "^15.0.3",
