--- a/remotes/profile/package.json
+++ b/remotes/profile/package.json
@@ -13,8 +13,11 @@
 		"react-dom": "18.2.0",
 		"react-router": "6.22.2",
 		"react-router-dom": "6.22.2",
-		"react-error-boundary": "^3.1.3",
-		"@dream.mf/bundlers": "0.0.5"
+		"react-helmet": "^6.1.0",
+		"@dream.mf/core": "1.2.3",
+		"@dream.mf/logging": "1.2.3",
+		"@dream.mf/bundlers": "0.0.8",
+		"@dream.mf/oidc": "0.9.2"
 	},
 	"devDependencies": {
 		"@types/node": "^15.0.3",
