--- a/remotes/sample/package.json
+++ b/remotes/sample/package.json
@@ -14,7 +14,9 @@
 		"react-router": "6.22.2",
 		"react-router-dom": "6.22.2",
 		"react-helmet": "^6.1.0",
-		"@dream.mf/bundlers": "0.0.5"
+		"@dream.mf/core": "1.2.3",
+		"@dream.mf/logging": "1.2.3",
+		"@dream.mf/bundlers": "0.0.8"
 	},
 	"devDependencies": {
 		"@babel/core": "7.17.5",
