--- a/package.json
+++ b/package.json
@@ -8,44 +8,17 @@
 	"keywords": [],
 	"author": "Chris Fryer <cfryerdev@gmail.com>",
 	"license": "MIT",
-	"dependencies": {
-		"@module-federation/enhanced": "0.1.12"
-	},
+	"dependencies": {},
 	"devDependencies": {
 		"@biomejs/biome": "1.5.3",
 		"@rspack/cli": "^0.6.5",
 		"@rspack/core": "^0.6.5",
-		"@rspack/plugin-react-refresh": "^0.6.5",
-		"@swc/helpers": "0.5.11",
 		"@types/node": "^18.17.17",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
-		"css-loader": "^6.8.1",
-		"dotenv": "16.0.1",
-		"dotenv-webpack": "8.1.0",
-		"esbuild-loader": "^3.2.0",
 		"eslint": "^8.49.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.0",
-		"html-webpack-plugin": "^5.5.3",
-		"mini-css-extract-plugin": "2.6.1",
-		"postcss": "^8.4.29",
-		"postcss-loader": "^7.3.3",
-		"postcss-normalize": "^10.0.1",
-		"postcss-preset-env": "^8.5.1",
-		"react-refresh": "^0.14.2",
-		"sass": "^1.67.0",
-		"sass-loader": "^13.3.2",
-		"sass-mq": "^6.0.0",
-		"ts-node": "10.9.2",
-		"tsconfig-paths-webpack-plugin": "^4.1.0",
-		"typescript": "^5.2.2",
-		"typescript-plugin-css-modules": "^5.0.1",
-		"webpack": "^5.75.0",
-		"webpack-cli": "^5.0.1",
-		"webpack-dev-server": "^4.11.1"
-	},
-	"workspaces": [
-		"shared"
-	]
+		"typescript": "^5.2.2"
+	}
 }
