--- a/remotes/profile/package.json
+++ b/remotes/profile/package.json
@@ -21,13 +21,9 @@
 	},
 	"devDependencies": {
 		"@types/node": "^15.0.3",
-		"@types/react": "18.0.9",
-		"@types/react-dom": "18.0.4",
-		"css-loader": "^6.7.1",
-		"html-webpack-plugin": "5.5.0",
-		"serve": "13.0.2",
-		"style-loader": "^3.3.1",
-		"ts-loader": "^9.1.2",
+		"@types/react": "^18.2.61",
+		"@types/react-dom": "^18.2.19",
+		"serve": "11.3.2",
 		"typescript": "4.4.2",
 		"webpack": "5.76.1",
 		"webpack-cli": "5.0.1",
