--- a/remotes/sample/package.json
+++ b/remotes/sample/package.json
@@ -19,11 +19,11 @@
 		"@dream.mf/bundlers": "0.0.10"
 	},
 	"devDependencies": {
-		"@babel/core": "7.17.5",
-		"@babel/preset-react": "7.16.7",
-		"babel-loader": "8.2.3",
-		"html-webpack-plugin": "5.5.0",
-		"serve": "13.0.2",
+		"@types/node": "^15.0.3",
+		"@types/react": "^18.2.61",
+		"@types/react-dom": "^18.2.19",
+		"serve": "11.3.2",
+		"typescript": "4.4.2",
 		"webpack": "5.76.1",
 		"webpack-cli": "5.0.1",
 		"webpack-dev-server": "4.12.0"
