--- a/host/package.json
+++ b/host/package.json
@@ -29,7 +29,6 @@
 		"serve": "11.3.2",
 		"typescript": "4.4.2",
 		"webpack": "5.76.1",
-		"webpack-cli": "5.0.1",
-		"webpack-dev-server": "4.12.0"
+		"webpack-cli": "5.0.1"
 	}
 }
