--- a/remotes/profile/package.json
+++ b/remotes/profile/package.json
@@ -23,10 +23,6 @@
 		"@types/node": "^15.0.3",
 		"@types/react": "^18.2.61",
 		"@types/react-dom": "^18.2.19",
-		"serve": "11.3.2",
-		"typescript": "4.4.2",
-		"webpack": "5.76.1",
-		"webpack-cli": "5.0.1",
-		"webpack-dev-server": "4.12.0"
+		"typescript": "4.4.2"
 	}
 }
