--- a/host/package.json
+++ b/host/package.json
@@ -27,6 +27,7 @@
 		"@types/react": "^18.2.61",
 		"@types/react-dom": "^18.2.19",
 		"serve": "11.3.2",
+		"style-loader": "^3.3.1",
 		"typescript": "4.4.2",
 		"webpack": "5.76.1",
 		"webpack-cli": "5.0.1"
