--- a/host/package.json
+++ b/host/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "host-app",
-	"version": "2.0.0",
+	"name": "dream-mf-host-application",
+	"version": "3.0.0",
 	"private": false,
 	"scripts": {
 		"start-webpack": "webpack-cli serve",
@@ -29,6 +29,7 @@
 		"serve": "11.3.2",
 		"typescript": "4.4.2",
 		"webpack": "5.76.1",
-		"webpack-cli": "5.0.1"
+		"webpack-cli": "5.0.1",
+		"zephyr-webpack-plugin": "0.0.13"
 	}
 }
