--- a/remotes/sample/package.json
+++ b/remotes/sample/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "remote-sample",
-	"version": "2.0.0",
+	"name": "dream-mf-remote-sample",
+	"version": "3.0.0",
 	"private": true,
 	"scripts": {
 		"start": "rspack serve",
@@ -16,12 +16,13 @@
 		"react-helmet": "^6.1.0",
 		"@dream.mf/core": "1.2.4",
 		"@dream.mf/logging": "1.2.3",
-		"@dream.mf/bundlers": "0.0.10"
+		"@dream.mf/bundlers": "0.1.0"
 	},
 	"devDependencies": {
 		"@types/node": "^15.0.3",
 		"@types/react": "^18.2.61",
 		"@types/react-dom": "^18.2.19",
-		"typescript": "4.4.2"
+		"typescript": "4.4.2",
+		"zephyr-webpack-plugin": "0.0.16"
 	}
 }
