--- a/host/.env
+++ b/host/.env
@@ -1,4 +1,4 @@
-CONFIG_API=http://localhost:8080/api/remotes/
+DREAM_ROS_API=http://localhost:5000/
 
 # Authentication
 OAUTH_AUTHORITY=https://cfryerdev-test.us.auth0.com
