--- a/host/package.json
+++ b/host/package.json
@@ -10,22 +10,26 @@
 		"clean": "rm -rf dist"
 	},
 	"dependencies": {
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-router": "6.22.2",
-		"react-router-dom": "6.22.2",
+		"react": "19.0.0",
+		"react-dom": "19.0.0",
+		"react-router": "7.1.1",
+		"react-router-dom": "7.1.1",
 		"@dream.mf/core": "1.2.4",
 		"@dream.mf/logging": "1.2.3",
-		"@dream.mf/utilities": "0.9.7",
-		"@dream.mf/bundlers": "0.0.10",
-		"@dream.mf/oidc": "1.0.0"
+		"@dream.mf/utilities": "0.9.10",
+		"@dream.mf/bundlers": "0.4.0",
+		"@dream.mf/oidc": "1.0.0",
+		"@mui/material": "^5.15.5",
+		"@mui/icons-material": "^5.15.5",
+		"@emotion/react": "^11.11.3",
+		"@emotion/styled": "^11.11.0"
 	},
 	"devDependencies": {
 		"sass": "^1.67.0",
 		"sass-loader": "^13.3.2",
 		"@types/node": "^15.0.3",
-		"@types/react": "^18.2.61",
-		"@types/react-dom": "^18.2.19",
+		"@types/react": "^19.0.0",
+		"@types/react-dom": "^19.0.0",
 		"serve": "11.3.2",
 		"typescript": "4.4.2",
 		"webpack": "5.76.1",
