--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"eslint": "^8.49.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.0",
-		"typescript": "^5.2.2"
+		"typescript": "^5.2.2",
+		"react-refresh": "^0.14.0"
 	}
 }
