--- a/remotes/sample/package.json
+++ b/remotes/sample/package.json
@@ -1,27 +1,27 @@
 {
-	"name": "remote-sample",
-	"version": "2.0.0",
-	"private": true,
-	"scripts": {
-		"start": "rspack serve",
-		"build": "rspack --mode production",
-		"serve": "serve dist -p 3002",
-		"clean": "rm -rf dist"
-	},
-	"dependencies": {
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-router": "6.22.2",
-		"react-router-dom": "6.22.2",
-		"react-helmet": "^6.1.0",
-		"@dream.mf/core": "1.2.4",
-		"@dream.mf/logging": "1.2.3",
-		"@dream.mf/bundlers": "0.0.10"
-	},
-	"devDependencies": {
-		"@types/node": "^15.0.3",
-		"@types/react": "^18.2.61",
-		"@types/react-dom": "^18.2.19",
-		"typescript": "4.4.2"
-	}
+  "name": "remote-sample",
+  "version": "2.0.0",
+  "private": true,
+  "scripts": {
+    "start": "rspack serve",
+    "build": "rspack build --mode production",
+    "serve": "serve dist -p 3002",
+    "clean": "rm -rf dist"
+  },
+  "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router": "7.1.1",
+    "react-router-dom": "7.1.1",
+    "react-helmet": "^6.1.0",
+    "@dream.mf/core": "1.2.4",
+    "@dream.mf/logging": "1.2.3",
+    "@dream.mf/bundlers": "0.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^15.0.3",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
+    "typescript": "4.4.2"
+  }
 }
