--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"@biomejs/biome": "1.5.3",
 		"@rspack/cli": "^0.6.5",
 		"@rspack/core": "^0.6.5",
-		"@types/node": "^18.17.17",
+		"@types/node": "15.0.3",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
 		"eslint": "^8.49.0",
